[UPD] 'name' attribute added to input tags. Business plan box's spacing fixed. Some layout changes to make the code easier. CLOSED

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ footer {
     flex-wrap: wrap;
 }
 
-.gap-40 {
+.r-gap-40 {
     row-gap: 40px;
 }
 
@@ -118,13 +118,13 @@ footer {
     margin: 0 auto;
 }
 
-.col-25 {
-    max-width: 25%;
+.col-33 {
+    max-width: calc(100% / 3);
     width: 100%;
 }
 
-.col-33 {
-    max-width: calc(100% / 3);
+.col-33-subtracted {
+    max-width: calc(100% / 3 - 30px);
     width: 100%;
 }
 
@@ -226,6 +226,7 @@ button {
 .btn--font-16 {
     font-size: 16px;
 }
+/* --- */
 
 .decoration-none {
     text-decoration: none;
@@ -248,11 +249,16 @@ h1 {
     font-size: 50px;
     top: 670px;
     right: 1160px;
+    cursor: pointer;
 }
 
 h2 {
     font-size: 36px;
     padding-bottom: 50px;
+}
+
+[type="radio"] {
+    cursor: pointer;
 }
 
 .content-plan-title, .content {
@@ -276,6 +282,7 @@ h2 {
 .btn--mt-30 {
     margin-top: 30px;
 }
+/* --- */
 
 .content h3 {
     font-size: 20px;
@@ -328,6 +335,7 @@ h2 {
 .btn--min-w {
     min-width: 200px;
 }
+/* --- */
 
 .partners {
     width: 600px;
@@ -346,6 +354,7 @@ h2 {
     margin-top: 30px;
     font-size: 16px;
 }
+/* --- */
 
 .partners-box>h3, .content-operations>h3 {
     margin-bottom: 25px;
@@ -371,7 +380,7 @@ h2 {
 }
 
 .white-filter {
-    filter: invert(100%) sepia(0%) saturate(7493%) hue-rotate(293deg) brightness(109%) contrast(96%);
+    filter: invert(100%);
 }
 
 .collab-content>p:last-of-type {
@@ -394,6 +403,7 @@ h2 {
     width: 300px;
     font-size: 15px;
 }
+/* --- */
 
 .bg-pastelblue h2 {
     font-size: 40px;
