--- a/css/utilities.css
+++ b/css/utilities.css
@@ -23,10 +23,6 @@
     margin-bottom: 50px;
 }
 
-.ml-30 {
-    margin-left: 30px;
-}
-
 /* Padding area */
 
 .p-ul {
